--- a/index.html
+++ b/index.html
@@ -5,12 +5,41 @@
         <meta name="description" content="to jest nasz pierwszy projekt">
         <title>Nasz projekt</title>
     </head>
-    <h1>HTML</h1>
-    <h2>Informacje o HTML</h2>
+        
     <body>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sodales massa leo, ut faucibus purus ullamcorper vitae. Proin ultricies velit ut mauris feugiat pretium eget pretium nisi. In euismod purus quis lacus lobortis, a faucibus dui ullamcorper. Mauris venenatis magna cursus suscipit imperdiet. Maecenas rhoncus congue ex at tempor. Donec lacinia sagittis ante, eu posuere arcu vulputate nec. Quisque scelerisque purus non magna dapibus lacinia. Sed nulla nisi, efficitur in metus quis, luctus cursus ipsum. Curabitur scelerisque tempus purus vel iaculis. Nulla facilisi. Sed eget rutrum dolor, vel tempor felis. Nullam id nisl id turpis iaculis vestibulum sed in tortor.</p>
+        <header style="width:50%;">
+            <h1 id="tytul">HTML</h1>
+            <h2 class="subtytul">Informacje o HTML</h2>
+        </header>
+        <section>
+            <nav>
+                <a href="omnie.html" target="_blank">O mnie strona</a>
+            </nav>
+            <aside>
+                SideBar
+            </aside>
             
-        <p>    Morbi dapibus justo vestibulum felis fermentum porttitor. Donec posuere scelerisque ex vitae mattis. Nulla facilisi. Fusce vitae vestibulum magna, eget pellentesque velit. Phasellus ut augue ante. Praesent consequat vestibulum est, a viverra risus bibendum sit amet. Aenean scelerisque sodales tellus, ac sollicitudin nulla lobortis ac. Nulla fermentum, lacus et vestibulum aliquet, diam risus semper velit, vel mollis velit ex nec magna. Vivamus eu ligula quis sem eleifend convallis. Donec non ligula ut orci faucibus facilisis. </p>
+            <article>
+                <p>
+                Lorem ipsum dolor sit amet, &lt;consectetur adipiscing elit. In &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; sodales massa leo, ut faucibus purus ullamcorper vitae. Proin ultricies velit ut mauris feugiat pretium eget pretium nisi. In euismod purus quis lacus lobortis, a faucibus dui ullamcorper. Mauris venenatis magna cursus suscipit imperdiet.<br><br><br> Maecenas rhoncus congue ex at tempor. Donec lacinia sagittis ante, eu posuere arcu vulputate nec. Quisque scelerisque purus non magna dapibus lacinia. Sed nulla nisi, efficitur in metus quis, luctus cursus ipsum. Curabitur scelerisque tempus purus vel iaculis. Nulla facilisi. Sed eget rutrum dolor, vel tempor felis. Nullam id nisl id turpis iaculis vestibulum sed in tortor.</p>
+                <ol>
+                   <li>pierwszy</li>
+                   <li>Drugi</li>
+                   <li>Trzeci</li>
+                   <li>Czwarty</li>
+                </ol>
+                <dl>
+                    <dt>Książka</dt>
+                    <dd>Forma do czytania</dd>
+                    <dt>Film</dt>
+                    <dd>Forma do oglądania</dd>
+                </dl>
+                <p>    &copy; &trade; &amp; Morbi dapibus justo vestibulum felis fermentum porttitor. Donec posuere scelerisque ex vitae mattis. Nulla facilisi. Fusce vitae vestibulum magna, eget pellentesque velit. Phasellus ut augue ante. Praesent consequat vestibulum est, a viverra risus bibendum sit amet. Aenean scelerisque sodales tellus, ac sollicitudin nulla lobortis ac. Nulla fermentum, lacus et vestibulum aliquet, diam risus semper velit, vel mollis velit ex nec magna. Vivamus eu ligula quis sem eleifend convallis. Donec non ligula ut orci faucibus facilisis. </p>
+                <img src="zdjecia/Bez tytułu.png" width="200" title="Do_Pary logo" alt="Do_Pary Logo!">
+            </article>
+            <footer>
+                &copy; &trade; Nasza Firma imperdiet
+            </footer>
+        </section>
     </body>
 </html>
